--- a/index/4/index.html
+++ b/index/4/index.html
@@ -4,9 +4,9 @@
 <meta charset="UTF-8">
 <title>万能搜索网站</title>
     <!--  导入CSS样式和特效  -->
-    <link href="../static/css/style.css" rel="stylesheet" type="text/css" />
+    <link href="./static/css/style.css" rel="stylesheet" type="text/css" />
     <canvas></canvas>
-    <script  src="../static/js/script1.js"></script>
+    <script  src="./static/js/script1.js"></script>
 </head>
 <body>
     <h1>搜索网站</h1>
